--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,4 +1,7 @@
 fastapi==0.114.2
 fastapi[standard]
+python-multipart
+PyMuPDF==1.24.10
+langchain==0.3.0
 SQLAlchemy==2.0.20
 psycopg2-binary==2.9.7
