--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -1,12 +1,24 @@
 services:
+  api:
+    build: .
+    networks:
+      - backend-network
+    ports:
+      - 8000:8000
   postgres:
     image: ankane/pgvector:latest
+    networks:
+      - backend-network
     ports:
       - 5432:5432
     volumes:
       - ~/apps/postgres:/var/lib/postgresql/data
-      - ./init.sql:/docker-entrypoint-initdb.d/init.sql
+      - ./backend/init.sql:/docker-entrypoint-initdb.d/init.sql
     environment:
       - POSTGRES_PASSWORD=5uperSecr3tP@ssw0rd!
       - POSTGRES_USER=pdf_chat_user
       - POSTGRES_DB=pdf_chat
+
+networks:
+  backend-network:
+    driver: bridge
