--- a/frontend/pdf-chat/package.json
+++ b/frontend/pdf-chat/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "^18.2.3",
     "@types/bootstrap": "^5.2.10",
     "bootstrap": "^5.3.3",
+    "bootstrap-icons": "^1.11.3",
     "express": "^4.20.0",
     "rxjs": "~7.8.0",
     "send": "^0.19.0",
