--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   api:
-    build: .
+    build: ./backend
     depends_on:
       postgres:
         condition: service_healthy
@@ -8,10 +8,23 @@ services:
       - backend-network
     ports:
       - 8000:8000
+
+  frontend:
+    build:
+      context: ./frontend/pdf-chat
+    networks:
+      - backend-network
+    ports:
+      - 4200:80
+    depends_on:
+      - api
+    environment:
+      - NODE_ENV=production
+
   postgres:
     image: ankane/pgvector:latest
     healthcheck:
-      test: [ "CMD-SHELL", "pg_isready -U pdf_chat_user -d pdf_chat"]
+      test: ["CMD-SHELL", "pg_isready -U pdf_chat_user -d pdf_chat"]
       interval: 10s
       timeout: 5s
       retries: 5
@@ -20,8 +33,8 @@ services:
     ports:
       - 5432:5432
     volumes:
-        - postgres-data:/var/lib/postgresql/data
-        - ./database/init.sql:/docker-entrypoint-initdb.d/init.sql
+      - postgres-data:/var/lib/postgresql/data
+      - ./backend/database/init.sql:/docker-entrypoint-initdb.d/init.sql
     environment:
       - POSTGRES_PASSWORD=5uperSecr3tP@ssw0rd!
       - POSTGRES_USER=pdf_chat_user
