--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -5,4 +5,6 @@ PyMuPDF==1.24.10
 langchain==0.3.0
 SQLAlchemy==2.0.20
 psycopg2-binary==2.9.7
+langchain-google-genai==2.0.0
+langchain-postgres==0.0.12
 langchain-ollama==0.2.0
