--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -2,10 +2,11 @@ fastapi==0.114.2
 fastapi[standard]
 python-multipart
 PyMuPDF==1.24.10
-langchain==0.3.0
+langchain==0.3.2
 SQLAlchemy==2.0.20
 psycopg2-binary==2.9.7
 langchain-google-genai==2.0.0
 langchain-postgres==0.0.12
 langchain-ollama==0.2.0
-langchain_openai==0.2.2
+langchain-community==0.3.1
+pandas==2.2.3
